add handler GetMemberList
